@@ -215,6 +215,12 @@
 
     <browser:view
       for="Products.PloneMeeting.interfaces.IMeeting"
+      name="recompute-items-order"
+      class=".views.MeetingRecomputeItemOrder"
+      permission="cmf.ModifyPortalContent" />
+
+    <browser:view
+      for="Products.PloneMeeting.interfaces.IMeeting"
       name="present-several-items"
       class=".views.PresentSeveralItemsView"
       permission="zope2.View"
