@@ -19,6 +19,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Added method print_in_and_out available in POD templates to ease printing of in/out moved of attendees.
   It is based on MeetingItem.getItemInAndOutAttendees that return informations about in/out moves as
   'left_before', 'entered_before', 'left_after' and 'entered_after'
+- Added possibility to recompute the whole meeting items number based on inserting methods using
+  the @@recompute-items-order view
 
 4.1b15 (2019-01-14)
 -------------------
